# CASA_OLD

./: README.md  pyproject.toml
docs/source/: conf.py  index.rst
src/CASA/: classification_pipeline.py  classification_pipeline_dask.py  distance_matrix.py
tests/: test_classification_pipeline.py
